--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,15 @@
   </head>
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-    <include src="./partials/example.html"></include>
+    <include src="./partials/header.html"></include>
+    <include src="./partials/hero.html"></include>
+    <include src="./partials/what-we-do.html"></include>
+    <include src="./partials/about-us.html"></include>
+    <include src="./partials/completed-work.html"></include>
+    <include src="./partials/testimonials.html"></include>
+    <include src="./partials/letest-news.html"></include>
+    <include src="./partials/contact-form.html"></include>
+    <include src="./partials/footer.html"></include>
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
