--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,14 @@
       integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@500;600&display=swap"
+      rel="stylesheet">
   </head>
   <body>
+    
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/header.html"></include>
     <include src="./partials/hero.html"></include>
@@ -19,7 +25,7 @@
     <include src="./partials/about-us.html"></include>
     <include src="./partials/completed-work.html"></include>
     <include src="./partials/testimonials.html"></include>
-    <include src="./partials/letest-news.html"></include>
+    <include src="./partials/latest-news.html"></include>
     <include src="./partials/contact-form.html"></include>
     <include src="./partials/footer.html"></include>
 
