--- a/src/index.html
+++ b/src/index.html
@@ -20,14 +20,17 @@
     
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/header.html"></include>
-    <include src="./partials/hero.html"></include>
-    <include src="./partials/what-we-do.html"></include>
-    <include src="./partials/about-us.html"></include>
-    <include src="./partials/completed-work.html"></include>
-    <include src="./partials/testimonials.html"></include>
-    <include src="./partials/latest-news.html"></include>
-    <include src="./partials/contact-form.html"></include>
-    <include src="./partials/footer.html"></include>
+    <main>
+      <include src="./partials/hero.html"></include>
+      <include src="./partials/what-we-do.html"></include>
+      <include src="./partials/about-us.html"></include>
+      <include src="./partials/completed-work.html"></include>
+      <include src="./partials/testimonials.html"></include>
+      <include src="./partials/latest-news.html"></include>
+      <include src="./partials/contact-form.html"></include>
+      <include src="./partials/footer.html"></include>
+    </main>
+   
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
