--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
     <include src="./partials/header.html"></include>
     <main>
       <include src="./partials/hero.html"></include>
-      <include src="./partials/what-we-do.html"></include>
+      <include src="./partials/services.html"></include>
       <include src="./partials/about-us.html"></include>
       <include src="./partials/completed-work.html"></include>
       <include src="./partials/testimonials.html"></include>
