--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
       <include src="./partials/about-us.html"></include>
       <include src="./partials/completed-work.html"></include>
       <include src="./partials/testimonials.html"></include>
-      <include src="./partials/latest-news.html"></include>
+      <include src="./partials/blog.html"></include>
       <include src="./partials/contact-form.html"></include>
       <include src="./partials/footer.html"></include>
     </main>
